saista-payment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: dev
  labels:
    app: payment-service
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
