saista-payment/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-service-route
  namespace: dev
spec:
  parentRefs:
    - name: saista-gateway
      namespace: dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/payment
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: payment-service
          port: 5003
